<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pal_camera</name>
  <version>0.1.1</version>
  <description>Ros 2 Interface to DreamVU Pal camera</description>
  <maintainer email="a.visser@uva.nl">Arnoud Visser</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
          <build_type>ament_cmake</build_type>
          <depend>rclcpp</depend>
          <depend>std_msgs</depend>
  </export>
</package>
